<resources>
    <string name="app_name">DataBindingPractise</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="alert_dialog_header">Adding a new contact:</string>
    <string name="send_message">Send message</string>
    <string name="enter_your_message">Enter your message:</string>
    <string name="delete_all_contacts">Delete all contacts</string>
    <string name="delete_contact">Delete contact</string>
    <string name="delete_current_contact">Delete current contact</string>
    <string name="start_service">Start service</string>
    <string name="bind_service">Bind service</string>
    <string name="spinner_hint">Choose photo URL</string>
    <string name="messages">Messages</string>
    <string name="make_okhttprequest">Make okHttpRequest</string>
    <string name="make_retrofit_request">Make Retrofit request</string>
    <string name="ask_about">Ask about</string>
    <string name="adult">Adult: </string>
    <string name="average_vote">Average vote:</string>
    <string name="release_date">Release date:</string>
    <string name="film_genres">Film Genres</string>
    <string name="no_home_page_link">None homepage link</string>
    <string name="todo">TODO</string>
    <string name="budget">Budget:</string>
    <string name="status">Status:</string>
    <string name="vote_average">Vote average:</string>
    <string name="overview">Overview:</string>
</resources>