<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="film"
            type="com.example.databindingpractise.model.Film" />

        <variable
            name="homeLink"
            type="String" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <ImageView
                android:id="@+id/posterView"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/film_title"
                app:layout_constraintTop_toBottomOf="@id/posterView"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{film.title}"
                android:textSize="50sp"
                android:textColor="@color/black"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/tag_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/film_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@{film.tagline}"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/budget_hint"
                app:layout_constraintTop_toBottomOf="@id/tag_line"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budget"
                android:textSize="25sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/budget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@id/budget_hint"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tag_line"
                android:text="@{String.valueOf(film.budget) + '$'}"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textAlignment="viewEnd"/>

            <TextView
                android:id="@+id/status_hint"
                app:layout_constraintTop_toBottomOf="@id/budget_hint"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="25sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintTop_toBottomOf="@id/budget"
                app:layout_constraintLeft_toRightOf="@id/status_hint"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@{film.status}"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textAlignment="viewEnd"/>

            <TextView
                android:id="@+id/adult_hint"
                app:layout_constraintTop_toBottomOf="@id/status"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adult"
                android:textSize="25sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/adult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintTop_toBottomOf="@id/status"
                app:layout_constraintLeft_toRightOf="@+id/adult_hint"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@{String.valueOf(film.adult)}"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textAlignment="viewEnd"/>

            <TextView
                android:id="@+id/vote_average_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/adult_hint"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/vote_average"
                android:textSize="25sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/vote_average"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintTop_toBottomOf="@id/adult_hint"
                app:layout_constraintLeft_toRightOf="@+id/vote_average_hint"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="25sp"
                android:text="@{String.valueOf(film.voteAverage)}"
                android:textColor="@color/black"
                android:textAlignment="viewEnd"/>

            <TextView
                android:id="@+id/release_date_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/vote_average_hint"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/release_date"
                android:textSize="25sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintTop_toBottomOf="@id/vote_average_hint"
                app:layout_constraintLeft_toRightOf="@+id/release_date_hint"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@{film.releaseDate}"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/overview_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/release_date"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/overview"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/overview_hint"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@{film.overview}"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textAlignment="center" />

            <TextView
                android:autoLink="web"
                android:id="@+id/homePage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/overview"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@{homeLink}"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textAlignment="center"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>